# typesense-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_connection.py
k8s/: deployment.yaml  keda-scaledobject.yaml  service.yaml
src/: __init__.py  client.py  server.py
src/tools/: __init__.py  collections.py  nl_models.py  rag.py  search.py
src/typesense_mcp/: __init__.py  collection_manager.py  config.py  search_examples.py  server.py
src/typesense_mcp/schemas/: __init__.py  collections.py  models.py
src/typesense_mcp/tools/: collections.py  documents.py  rag.py  search.py
